# RedisGraph

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  index.html
commands/: index.html
demo/imdb/: imdb_queries.py
demo/social/: social_queries.py
design/: index.html
src/: Makefile  module.c  query_executor.c  query_executor.h  value.c  value.h
src/arithmetic/: agg_funcs.c  agg_funcs.h  algebraic_expression.c  algebraic_expression.h  arithmetic_expression.c  arithmetic_expression.h
src/ast/: ast.c  ast.h  ast_build_filter_tree.c  ast_build_filter_tree.h  ast_build_op_contexts.c  ast_mapping.c  ast_validations.c
src/commands/: cmd_delete.c  cmd_explain.c  cmd_query.c
src/execution_plan/: execution_plan.c  execution_plan.h  record.c  record.h  record_map.c
src/execution_plan/ops/: op.h  op_aggregate.c  op_aggregate.h  op_all_node_scan.c  op_cartesian_product.c  op_cond_var_len_traverse.c  op_conditional_traverse.c  op_conditional_traverse.h  op_create.c  op_create.h  op_delete.c  op_delete.h  op_merge.c  op_merge.h  op_node_by_label_scan.c  op_node_by_label_scan.h  op_procedure_call.c  op_procedure_call.h  op_project.c  op_project.h  op_sort.c  op_update.c  op_update.h  ops.h
src/execution_plan/optimizations/: optimizations.h  optimizer.c  quick_count.c  quick_count.h  reduce_scans.h  utilize_indices.c
src/filter_tree/: filter_tree.c  filter_tree.h
src/graph/: edge.h  graph.c  graph.h  query_graph.c  query_graph.h
src/grouping/: group_cache.c
src/index/: index.c
src/parser/: ast.c  ast.h  lex.yy.c  lexer.l  newast.c  newast.h  newast_filter_tree.c  newast_filter_tree.h
src/resultset/: resultset.c  resultset.h  resultset_formatters.h  resultset_header.h  resultset_replycompact.c  resultset_replyverbose.c
tests/flow/: redis_base.py  test_bulk_insertion.py  test_concurrent_query.py  test_distinct.py  test_graph_deletion.py  test_graph_merge.py  test_imdb.py  test_index_scans.py  test_mix_labels.py  test_multi_exec.py  test_multi_pattern.py  test_persistency.py  test_procedures.py  test_query_validation.py  test_value_comparisons.py  test_variable_length_traversals.py  test_with_clause.py
tests/unit/: test_algebraic_expression.cpp  test_filter_tree.cpp
